feat: finishing integration
