# src/dtos/like.dto.ts
@@ -1,0 +1,5 @@
+import { Like } from '@prisma/client';
+
+export type CreateLikeDTO = Pick<Like, 'threadId'>;
+
+export type DeleteLikeDTO = Pick<Like, 'threadId'>;
