# src/routes/like.route.ts
@@ -1,7 +1,5 @@
 import express from 'express';
-import threadController from '../controllers/thread.controller';
-import { initCloudinary } from '../middlewares/cloudinary.middleware';
-import { uploadImage } from '../middlewares/upload.middleware';
+import likeController from '../controllers/like.controller';
 import { authCheck } from '../middlewares/auth-check.middleware';
 import { rateLimit } from 'express-rate-limit';
 
@@ -9,7 +7,7 @@ const router = express.Router();
 
 const limiter = rateLimit({
   windowMs: 5 * 60 * 1000, // 5 minutes
-  limit: 10, // Limit each IP to 100 requests per `window` (here, per 15 minutes).
+  limit: 100, // Limit each IP to 100 requests per `window` (here, per 15 minutes).
   standardHeaders: 'draft-8', // draft-6: `RateLimit-*` headers; draft-7 & draft-8: combined `RateLimit` header
   legacyHeaders: false, // Disable the `X-RateLimit-*` headers.
   message: {
@@ -18,15 +16,9 @@ const limiter = rateLimit({
   // store: ... , // Redis, Memcached, etc. See below.
 });
 
-router.get('/', authCheck, threadController.getThreads);
-router.get('/:id', authCheck, threadController.getThreadById);
-router.post(
-  '/',
-  limiter,
-  authCheck,
-  initCloudinary,
-  uploadImage.single('images'),
-  threadController.createThread,
-);
+router.use(limiter);
+
+router.post('/', authCheck, likeController.createLike);
+router.delete('/:threadId', authCheck, likeController.deleteLike);
 
 export default router;
